--- a/index.html
+++ b/index.html
@@ -83,7 +83,200 @@
         </div>
         <script src="script.js"></script>
     </div>
+
+    <!--Grid Section-->
+    <section class="Grid-sec">
+        <div class="grid-1">
+
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <div class="boxgrid">
+                <div class="box">
+                    <img src="image/logo.png" alt="">
+                    <h4>Lorem, ipsum dolor.</h4>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+                <div class="box">
+                    <img src="image/logo.png" alt="">
+                    <h4>Lorem, ipsum dolor.</h4>
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="grid-2">
+            <div class="box">
+                <img src="image/grid.png" alt="">
+                <h4>Lorem, ipsum dolor.</h4>
+                <p>Lorem ipsum dolor sit.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <!--Grid-->
+
+    <div class="container">
+        <div class="card-content" style="display: none">
+            <div class="card">
+                <div class="card-image"><img src="image/6.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 01</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/5.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 02</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/21.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 03</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/24.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 04</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/23.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 05</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/22.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 06</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/21.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 07</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/20.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 08</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/21.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 09</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/22.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 10</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/23.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 11</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/24.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 12</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/25.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 13</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/26.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 14</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/27.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 15</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/28.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 16</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/29.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 17</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"><img src="image/10.jpg" alt=""></div>
+                <div class="card-info">
+                    <h3>Customer 18</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+            <div class="pagination">
+                <li class="page-item previous-page disable"><a class="page-link" href="#">Prev</a></li>
+                <li class="page-item current-page active"><a class="page-link" href="#">1</a></li>
+                <li class="page-item dots"><a class="page-link" href="#">...</a></li>
+                <li class="page-item current-page"><a class="page-link" href="#">5</a></li>
+                <li class="page-item current-page"><a class="page-link" href="#">6</a></li>
+                <li class="page-item dots"><a class="page-link" href="#">...</a></li>
+                <li class="page-item current-page"><a class="page-link" href="#">10</a></li>
+                <li class="page-item next-page"><a class="page-link" href="#">Next</a></li>
+            </div>
+            <script src="myscript.js"></script>
+        </div>
+
+    </div>
+
 </body>
-</body>
+
 
 </html>
