--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -114,13 +115,12 @@
     </section>
 
     <!--Grid-->
-
     <div class="container">
         <div class="card-content" style="display: none">
             <div class="card">
                 <div class="card-image"><img src="image/6.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 01</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -128,7 +128,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/5.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 02</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -136,7 +136,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/21.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 03</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -144,7 +144,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/24.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 04</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -152,7 +152,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/23.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 05</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -160,7 +160,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/22.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 06</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -168,7 +168,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/21.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 07</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -176,7 +176,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/20.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 08</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -184,7 +184,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/21.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 09</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -192,7 +192,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/22.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 10</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -200,7 +200,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/23.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 11</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -208,7 +208,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/24.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 12</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -216,7 +216,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/25.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 13</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -224,7 +224,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/26.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 14</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -232,7 +232,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/27.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 15</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -240,7 +240,7 @@
             <div class="card">
                 <div class="card-image"><img src="image/28.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 16</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -248,15 +248,15 @@
             <div class="card">
                 <div class="card-image"><img src="image/29.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 17</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
             </div>
             <div class="card">
-                <div class="card-image"><img src="image/10.jpg" alt=""></div>
+                <div class="card-image"><img src="image/30.jpg" alt=""></div>
                 <div class="card-info">
-                    <h3>Customer 18</h3>
+                    <h3>Card 01</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua.</p>
                 </div>
@@ -271,10 +271,9 @@
                 <li class="page-item current-page"><a class="page-link" href="#">10</a></li>
                 <li class="page-item next-page"><a class="page-link" href="#">Next</a></li>
             </div>
-            <script src="myscript.js"></script>
         </div>
-
     </div>
+    <script src="myscript.js"></script>
 
 </body>
 
