--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fitness</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -275,6 +277,31 @@
     </div>
     <script src="myscript.js"></script>
 
+    <!--subscribe-->
+    <div class="subscribe">
+        <div class="section-1">
+            <img src="image/brand (1).png" alt="">
+            <img src="image/brand (2).png" alt="">
+            <img src="image/brand (3).png" alt="">
+            <img src="image/brand (4).png" alt="">
+        </div>
+        <div class="section-2">
+            <h1>You Want More!</h1>
+            <form action="">
+                <input type="text" id="fname">
+            </form>
+            <button>Email-us</button>
+        </div>
+        <div class="section-3">
+            <ul>
+                <li>Make it or break it!</li>
+                <li>No pain, no gain!</li>
+                <li>Get fit and look great.</li>
+                <li>Become fit to stay resilient.</li>
+            </ul>
+        </div>
+
+    </div>
 </body>
 
 
